[package]
name = "port-tester-client"
version = "0.1.0"
authors = ["Zettroke <skorostnoy2000@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto=true

[dependencies]
indicatif = "0.15.0"
ureq = { version = "1.4.0", default-features = false }
structopt = "0.3.16"
serde = { version = "1.0.115", features = ["serde_derive"] }
serde_json = "1.0.57"
num_cpus = "1.13.0"
rayon = { version = "1.3.1", default-features = false }
ctrlc = "3.1.6"
prettytable-rs = {version = "0.8.0", default-features = false }
