[package]
name = "port-tester-client"
version = "0.1.0"
authors = ["Zettroke <skorostnoy2000@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto=true

[dependencies]
indicatif = "0.15.0"
ureq = { version = "1.4.0", default-features = false }
structopt = { version = "0.3.16", default-features = false }
serde = { version = "1.0.115", features = ["derive"] }
serde_json = "1.0.57"
num_cpus = "1.13.0"
rayon = { version = "1.3.1", default-features = false }
prettytable-rs = {version = "0.8.0", default-features = false }
textwrap = { version = "0.11.0", default-features = false }
